--- a/src/View.fxml
+++ b/src/View.fxml
@@ -25,15 +25,15 @@
         GridPane.columnIndex="0" GridPane.rowIndex="5"/>
         
          
-    <TextField 
+    <TextField fx:id="namefield"
         GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-	<TextField 
+	<TextField fx:id="paramsfield"
         GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-	<TextField 
+	<TextField fx:id="returnfield"
         GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-	<TextField 
+	<TextField fx:id="stdinfield"
         GridPane.columnIndex="1" GridPane.rowIndex="4"/>
-	<TextField 
+	<TextField fx:id="stdoutfield"
         GridPane.columnIndex="1" GridPane.rowIndex="5"/>
 
 
@@ -49,7 +49,7 @@
 	<Text fx:id="actiontarget"
 		GridPane.columnIndex="1" GridPane.rowIndex="7"/>
        
-   <Text id="welcome-text" text="AutoAuto Test"
+   <Text id="welcome-text" text="AutoAuto Tester"
    		GridPane.columnIndex="0" GridPane.rowIndex="0" 
         GridPane.columnSpan="2"/>
 
