--- a/src/view/View.fxml
+++ b/src/view/View.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.shape.Rectangle?>
 
-<GridPane fx:controller="ViewController" 
-    xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10" 
-    styleClass="root">
+<GridPane fx:controller="ViewController"
+	xmlns:fx="http://javafx.com/fxml"
+	alignment="center" hgap="10" vgap="10" styleClass="root">
 
 
 		
