--- a/src/view/View.fxml
+++ b/src/view/View.fxml
@@ -8,32 +8,37 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.shape.Rectangle?>
 
-<BorderPane fx:controller="view.ViewController"
-	xmlns:fx="http://javafx.com/fxml"
-	styleClass="root">
+<GridPane fx:controller="view.ViewController" 
+    xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10" 
+    styleClass="root">
 
 
-
-	<ListView fx:id="mylist">
+	<ListView fx:id="listView" GridPane.columnIndex="1" GridPane.rowIndex="0">
 			
 	</ListView>
 
 
 
-	<!--
-	<ScrollPane fx:id="list"
-		GridPane.columnIndex="0" GridPane.rowIndex="0">
-		<content>
-			<VBox prefWidth="300" prefHeight="500" alignment="center" fx:id="box">
-				<children>
-					<Label alignment="center" text=""/>
-				</children>
-			</VBox>
-		</content>
-	</ScrollPane>
-	-->
 
- 	<GridPane alignment="center" hgap="10" vgap="10">
+ 	<GridPane hgap="10" vgap="10" GridPane.columnIndex="0" GridPane.rowIndex="0">
+	    
+	    
+	    <!--
+		<ScrollPane fx:id="list"
+			GridPane.columnIndex="0" GridPane.rowIndex="0">
+			<content>
+				<VBox prefWidth="300" prefHeight="500" alignment="center" fx:id="box">
+					<children>
+						<Label alignment="center" text="text"/>
+					</children>
+				</VBox>
+			</content>
+		</ScrollPane>	    
+	    -->
+	    
+	    
+	    
+	    
 	    <Label text="Name:"
 	        GridPane.columnIndex="0" GridPane.rowIndex="1"/>
 	    <Label text="Parameters:"
@@ -104,4 +109,4 @@
 			<URL value="@View.css" />
 		</stylesheets>
 
-</BorderPane>
+</GridPane>
