Fixed an exception that was caused by the selection model of the list remaining selected after the deletion of a test.

--- a/src/view/View.css
+++ b/src/view/View.css
@@ -5,7 +5,8 @@
 .label {
     -fx-font-size: 12px;
     -fx-font-weight: bold;
-    -fx-text-fill: #333333;
+    -fx-text-fill: #FFFFFF;
+    /* -fx-text-fill: #333333; */
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
 
@@ -25,7 +26,8 @@
 #welcome-text {
    -fx-font-size: 32px;
    -fx-font-family: "Arial Black";
-   -fx-fill: #818181;
+   -fx-fill: #FFFFFF;
+/*   -fx-fill: #818181;*/
    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
 }
 #actiontarget {
