Changed the background color of the gui to gray.

--- a/src/view/View.css
+++ b/src/view/View.css
@@ -1,11 +1,12 @@
 .root {
-	-fx-background-image: url("background.jpg");
+/*	-fx-background-image: url("background.jpg");*/
+        -fx-background-color: rgb(81,81,81);
 }
 
 .label {
     -fx-font-size: 12px;
     -fx-font-weight: bold;
-    -fx-text-fill: #333333;
+    -fx-text-fill: #FFF;
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
 
@@ -25,7 +26,7 @@
 #welcome-text {
    -fx-font-size: 32px;
    -fx-font-family: "Arial Black";
-   -fx-fill: #818181;
+   -fx-fill: #FFFFFF;
    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
 }
 #actiontarget {
