--- a/src/view/View.fxml
+++ b/src/view/View.fxml
@@ -73,7 +73,10 @@
                 GridPane.rowIndex="11"/>
         <Label text="Ignore Punctuation:"
                 GridPane.columnIndex="0"
-                GridPane.rowIndex="12"/>                
+                GridPane.rowIndex="12"/>
+        <Label text="Return Void:"
+                GridPane.columnIndex="0"
+                GridPane.rowIndex="13"/>                
          
         <!-- These are the input fields. -->
         <TextField fx:id="namefield"
@@ -112,12 +115,15 @@
         <CheckBox fx:id="ignorePunctuationBox"
                 GridPane.columnIndex="1"
                 GridPane.rowIndex="12"/>
+        <CheckBox fx:id="returnVoidBox"
+                GridPane.columnIndex="1"
+                GridPane.rowIndex="13"/>
         
         <!-- This is the Generate Button. -->
         <HBox spacing="10"
                 alignment="bottom_right"
                 GridPane.columnIndex="1"
-                GridPane.rowIndex="13">
+                GridPane.rowIndex="14">
             <Button text="Generate Test"
                     onAction="#handleGenerateButtonAction"/>
         </HBox>
@@ -126,7 +132,7 @@
         <HBox spacing="10"
                 alignment="bottom_right"
                 GridPane.columnIndex="0"
-                GridPane.rowIndex="13">
+                GridPane.rowIndex="14">
             <Button text="Delete Selected Test"
                     onAction="#handleDeleteButtonAction"/>
         </HBox>
