--- a/src/view/View.fxml
+++ b/src/view/View.fxml
@@ -8,25 +8,27 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.shape.Rectangle?>
 
-
 <GridPane fx:controller="view.ViewController" 
     xmlns:fx="http://javafx.com/fxml"
     alignment="center"
     hgap="10"
     vgap="10" 
     styleClass="root">
-
+    
+	<MenuBar fx:id="menuBar">
+	</MenuBar> 
+    
     <!-- This is the listview for our tests. -->
     <ListView fx:id="listView"
             GridPane.columnIndex="1"
-            GridPane.rowIndex="0"> 
+            GridPane.rowIndex="1"> 
     </ListView>
     
     <!-- This is the Save button. -->
     <HBox spacing="10"
             alignment="bottom_right"
             GridPane.columnIndex="1"
-            GridPane.rowIndex="2">
+            GridPane.rowIndex="3">
         <Button text="Save All Tests"
                 onAction="#handleSaveButtonAction"/>
     </HBox>
@@ -35,7 +37,7 @@
      <GridPane hgap="10"
              vgap="10"
              GridPane.columnIndex="0"
-             GridPane.rowIndex="0">
+             GridPane.rowIndex="1">
         
         <!-- These are the text labels. -->
         <Label text="Test Name:"
@@ -148,5 +150,5 @@
     <stylesheets>
         <URL value="@View.css" />
     </stylesheets>
-
+    
 </GridPane>
