Use this link: http://docs.oracle.com/javafx/2/api/ for figuring out what keywords to use.

--- a/src/view/View.fxml
+++ b/src/view/View.fxml
@@ -16,6 +16,7 @@
     styleClass="root">
     
 	<MenuBar fx:id="menuBar">
+	    <Menu fx:id="save" text="Save"/>
 	</MenuBar> 
     
     <!-- This is the listview for our tests. -->
