Worked more on the menu, and removed unnecessary objects in the gui, but the menu check boxes are registering as null when a test is attempted to be created.

--- a/src/view/View.css
+++ b/src/view/View.css
@@ -1,6 +1,11 @@
 .root {
     -fx-background-color: rgb(81,81,81);
-    -fx-padding: 10px;
+    /*-fx-padding:10px;*/
+    /*-fx-margin:10px;
+    margin-bottom:10px;*/
+    padding-right:10px;
+    -fx-padding-left:10px;
+    /*-fx-margin-top:10px;*/
 }
 
 .label {
