Ignore punctuation checkbox menu does not work, it causes an exception.

--- a/src/view/View.fxml
+++ b/src/view/View.fxml
@@ -34,7 +34,8 @@
 	                onAction="#handleCasingMenuCheckBox"/>
 	        <CheckMenuItem text="Ignore WhiteSpace"
 	                onAction="#handleWhiteSpaceMenuCheckBox"/>
-
+	        <CheckMenuItem text="Ignore Punctuation"
+	                onAction="#handlePunctuationMenuCheckBox"/>
 	    </Menu>
 	</MenuBar>
     
