--- a/src/view/View.css
+++ b/src/view/View.css
@@ -1,18 +1,16 @@
 .root {
     -fx-background-color: rgb(81,81,81);
-    /*-fx-padding:10px;*/
-    /*-fx-margin:10px;
-    margin-bottom:10px;*/
-    padding-right:10px;
-    -fx-padding-left:10px;
-    /*-fx-margin-top:10px;*/
+}
+
+.grid {
+    -fx-padding:10px;
 }
 
 .label {
     -fx-font-size: 12px;
     -fx-font-weight: bold;
     -fx-text-fill: #FFF;
-    -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
+    -fx-effect: dropshadow(gaussian, rgba(255,255,255,0.5), 0, 0, 0, 1);
 }
 
 .button {
@@ -20,7 +18,7 @@
     -fx-font-family: "Arial Narrow";
     -fx-font-weight: bold;
     -fx-background-color: linear-gradient(#61a2b1, #2A5058);
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.6), 5, 0.0, 0, 1);
 }
 
 
@@ -32,10 +30,5 @@
    -fx-font-size: 32px;
    -fx-font-family: "Arial Black";
    -fx-fill: #FFF;
-   -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
-}
-#actiontarget {
-  -fx-fill: FIREBRICK;
-  -fx-font-weight: bold;
-  -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );  
+   -fx-effect: innershadow(three-pass-box, rgba(0,0,0,0.7), 6, 0.0, 0, 2 );
 }
