--- a/src/view/View.fxml
+++ b/src/view/View.fxml
@@ -19,7 +19,8 @@
     <!-- This is the listview for our tests. -->
     <ListView fx:id="listView"
             GridPane.columnIndex="1"
-            GridPane.rowIndex="0"> 
+            GridPane.rowIndex="0"
+            onMouseClicked="#handleClickOnListAction"> 
     </ListView>
     
     <!-- This is the Save button. -->
@@ -121,16 +122,25 @@
         
         <!-- This is the Generate Button. -->
         <HBox spacing="10"
-                alignment="bottom_right"
-                GridPane.columnIndex="1"
+                alignment="center"
+                GridPane.columnIndex="2"
                 GridPane.rowIndex="14">
             <Button text="Generate Test"
                     onAction="#handleGenerateButtonAction"/>
         </HBox>
         
+        <!-- This is the Replace Button. -->
+        <HBox spacing="10"
+                alignment="center"
+                GridPane.columnIndex="1"
+                GridPane.rowIndex="14">
+            <Button text="Replace Selected Test"
+                    onAction="#handleReplaceButtonAction"/>
+        </HBox>        
+        
         <!-- This is the Delete Button. -->
         <HBox spacing="10"
-                alignment="bottom_right"
+                alignment="center"
                 GridPane.columnIndex="0"
                 GridPane.rowIndex="14">
             <Button text="Delete Selected Test"
