--- a/src/view/View.fxml
+++ b/src/view/View.fxml
@@ -35,7 +35,7 @@
 	
     <right>
 	    <!-- This is the listview for our tests. -->
-	    <ListView fx:id="listView"/> 
+	    <ListView fx:id="listView" onMouseClicked="#handleClickOnListAction"/> 
     </right>
    
     <center> 
@@ -102,16 +102,25 @@
 	        
 	        <!-- This is the Generate Button. -->
 	        <HBox spacing="10"
-	                alignment="bottom_right"
-	                GridPane.columnIndex="1"
+	                alignment="center"
+	                GridPane.columnIndex="2"
 	                GridPane.rowIndex="14">
 	            <Button text="Generate Test"
 	                    onAction="#handleGenerateButtonAction"/>
 	        </HBox>
 	        
+            <!-- This is the Replace Button. -->
+	        <HBox spacing="10"
+	                alignment="center"
+	                GridPane.columnIndex="1"
+	                GridPane.rowIndex="14">
+	            <Button text="Replace Test"
+	                    onAction="#handleReplaceButtonAction"/>
+	        </HBox>
+	        
 	        <!-- This is the Delete Button. -->
 	        <HBox spacing="10"
-	                alignment="bottom_right"
+	                alignment="center"
 	                GridPane.columnIndex="0"
 	                GridPane.rowIndex="14">
 	            <Button text="Delete Selected Test"
